WIP to add ripple and click handler on Card.

--- a/app/src/main/res/layout/game_item_view.xml
+++ b/app/src/main/res/layout/game_item_view.xml
@@ -11,6 +11,8 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         card_view:cardPreventCornerOverlap="true"
         card_view:cardUseCompatPadding="true"
         card_view:contentPadding="18sp"
