--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="apps.staydecent.com.tabletoptally.GameActivity"
-    tools:showIn="@layout/activity_game">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-</RelativeLayout>
+    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
+        android:id="@+id/scores_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:rrvLayoutType="LinearLayout"
+        app:rrvSwipeToDelete="false"
+        app:rrvEmptyLayoutId="@layout/score_empty_view"
+        />
+</FrameLayout>
