--- a/app/src/main/res/layout/score_players_dialog_view.xml
+++ b/app/src/main/res/layout/score_players_dialog_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="20dp">
 
-    <EditText
+    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,6 +14,7 @@
         android:singleLine="true"
         android:imeOptions="actionDone"
         android:hint="Player Names"
-        android:inputType="textCapWords"
+        android:inputType="textAutoComplete"
         />
+
 </LinearLayout>
