--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/scores_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:rrvLayoutType="LinearLayout"
-        app:rrvSwipeToDelete="false"
-        app:rrvEmptyLayoutId="@layout/score_empty_view"
         />
+
 </FrameLayout>
