--- a/app/src/main/res/layout/score_players_dialog_view.xml
+++ b/app/src/main/res/layout/score_players_dialog_view.xml
@@ -21,7 +21,7 @@
         android:layout_below="@+id/names"
         app:layout_widthPercent="70%"
         android:singleLine="true"
-        android:hint="Player Names"
+        android:hint="@string/hint_dialog_players"
         android:inputType="textAutoComplete"
         />
 
@@ -35,7 +35,7 @@
         app:layout_widthPercent="30%"
         android:backgroundTint="@color/colorAccent"
         android:textColor="#ffffff"
-        android:text="+"
+        android:text="@string/btn_add_dialog_players"
         />
 
 </android.support.percent.PercentRelativeLayout>
