--- a/app/src/main/res/layout/score_item_view.xml
+++ b/app/src/main/res/layout/score_item_view.xml
@@ -5,18 +5,21 @@
     android:layout_height="wrap_content">
 
    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/score_list_item"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        card_view:cardPreventCornerOverlap="true"
-        card_view:cardUseCompatPadding="true"
-        card_view:contentPadding="18sp"
-        >
+       xmlns:card_view="http://schemas.android.com/apk/res-auto"
+       xmlns:android="http://schemas.android.com/apk/res/android"
+       android:id="@+id/score_list_item"
+       android:layout_gravity="center"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_marginTop="@dimen/card_top"
+       android:layout_marginLeft="@dimen/card_sides"
+       android:layout_marginRight="@dimen/card_sides"
+       android:foreground="?android:attr/selectableItemBackground"
+       android:clickable="true"
+       card_view:cardPreventCornerOverlap="true"
+       card_view:cardUseCompatPadding="true"
+       card_view:contentPadding="18sp"
+       >
 
         <RelativeLayout
             android:layout_width="fill_parent"
