--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6cbc2f</color>
-    <color name="colorPrimaryDark">#6f9f30</color>
-    <color name="colorAccent">#ffbf40</color>
+    <color name="colorPrimary">#305d48</color>
+    <color name="colorPrimaryDark">#193128</color>
+    <color name="colorAccent">#BBE14E</color>
 </resources>
