--- a/app/src/main/res/layout/score_item_view.xml
+++ b/app/src/main/res/layout/score_item_view.xml
@@ -4,22 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-   <android.support.v7.widget.CardView
-       xmlns:card_view="http://schemas.android.com/apk/res-auto"
-       xmlns:android="http://schemas.android.com/apk/res/android"
-       android:id="@+id/score_list_item"
-       android:layout_gravity="center"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:layout_marginTop="@dimen/card_top"
-       android:layout_marginLeft="@dimen/card_sides"
-       android:layout_marginRight="@dimen/card_sides"
-       android:foreground="?android:attr/selectableItemBackground"
-       android:clickable="true"
-       card_view:cardPreventCornerOverlap="true"
-       card_view:cardUseCompatPadding="true"
-       card_view:contentPadding="18sp"
-       >
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/score_list_item"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/card_top"
+        android:layout_marginLeft="@dimen/card_sides"
+        android:layout_marginRight="@dimen/card_sides"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        card_view:cardCornerRadius="0sp"
+        card_view:cardElevation="0sp"
+        card_view:cardPreventCornerOverlap="false"
+        card_view:cardUseCompatPadding="true"
+        card_view:contentPadding="18sp"
+        card_view:cardBackgroundColor="@color/colorPrimaryDark"
+        >
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -32,14 +35,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:padding="4dp"
-                android:textSize="32sp"
-                 />
+                style="@style/Heading"
+                />
 
             <TextView
                 android:id="@+id/score_total_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textColor="#fff"
                 android:layout_alignParentStart="false"
                 android:layout_alignParentEnd="false"
                 android:layout_alignParentRight="true"
