--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -15,5 +15,6 @@
         <item name="android:colorForeground">@color/colorPrimaryDark</item>
         <item name="android:navigationBarColor">@color/colorPrimaryDark</item>
         <item name="android:textColorPrimary">@color/colorPrimaryDark</item>
+        <item name="android:statusBarColor">?android:attr/colorPrimary</item>
     </style>
 </resources>
