Remove margin from score cards.

--- a/app/src/main/res/layout/score_item_view.xml
+++ b/app/src/main/res/layout/score_item_view.xml
@@ -11,9 +11,7 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/card_top"
-        android:layout_marginLeft="@dimen/card_sides"
-        android:layout_marginRight="@dimen/card_sides"
+        android:layout_margin="0sp"
         android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         card_view:cardCornerRadius="0sp"
