--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark">
 
     <ImageView
         android:layout_width="match_parent"
@@ -16,14 +17,15 @@
         android:padding="@dimen/activity_vertical_margin">
 
         <TextView
-            android:id="@+id/DETAILS_name"
+            android:id="@+id/details_player_name"
+            android:transitionName="@string/transition_name_player_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jonh Doe"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_centerVertical="true"
-            android:textColor="#000"
-            android:textSize="25sp"/>
+            style="@style/Heading"
+            />
 
     </RelativeLayout>
 
