--- a/app/src/main/res/layout/score_item_view.xml
+++ b/app/src/main/res/layout/score_item_view.xml
@@ -28,7 +28,8 @@
             >
 
             <TextView
-                android:id="@+id/score_text_view"
+                android:id="@+id/score_player_name"
+                android:transitionName="@string/transition_name_player_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
