--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -5,29 +5,42 @@
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark">
 
-    <ImageView
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/score_list_item"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        />
+        android:layout_height="match_parent"
+        android:layout_margin="0sp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        card_view:cardCornerRadius="0sp"
+        card_view:cardElevation="0sp"
+        card_view:cardPreventCornerOverlap="false"
+        card_view:cardUseCompatPadding="true"
+        card_view:contentPadding="18sp"
+        card_view:cardBackgroundColor="@color/colorPrimaryDark"
+        >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="82dp"
-        android:padding="@dimen/activity_vertical_margin">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            >
 
-        <TextView
-            android:id="@+id/details_player_name"
-            android:transitionName="@string/transition_name_player_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Jonh Doe"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_centerVertical="true"
-            style="@style/Heading"
-            />
+            <TextView
+                android:id="@+id/details_player_name"
+                android:transitionName="@string/transition_name_player_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:padding="4dp"
+                style="@style/Heading"
+                />
 
-    </RelativeLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
