Ensure dialog dropdowns are white bg.

--- a/app/src/main/res/layout/score_players_dialog_view.xml
+++ b/app/src/main/res/layout/score_players_dialog_view.xml
@@ -23,6 +23,7 @@
         android:singleLine="true"
         android:hint="@string/hint_dialog_players"
         android:inputType="textAutoComplete"
+        android:popupBackground="#fff"
         />
 
     <Button
