--- a/app/src/main/res/layout/scores_winner_dialog_view.xml
+++ b/app/src/main/res/layout/scores_winner_dialog_view.xml
@@ -9,6 +9,8 @@
     <Spinner
         android:id="@+id/winner_spinner"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:popupBackground="#fff"
+        />
 
 </LinearLayout>
