--- a/app/src/main/res/layout/shared_toolbar.xml
+++ b/app/src/main/res/layout/shared_toolbar.xml
@@ -8,6 +8,7 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
+        android:transitionName="@string/transition_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
