--- a/app/src/main/res/layout/content_player_details.xml
+++ b/app/src/main/res/layout/content_player_details.xml
@@ -53,8 +53,8 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:padding="@dimen/activity_horizontal_margin"
         android:orientation="vertical">
