Playing around with new theme/colours.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="0sp"
+    android:padding="0sp"
     android:fitsSystemWindows="true"
     tools:context="apps.staydecent.com.tabletoptally.MainActivity">
 
