--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -9,7 +9,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/scores_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
