--- a/app/src/main/res/layout/content_player_details.xml
+++ b/app/src/main/res/layout/content_player_details.xml
@@ -10,45 +10,25 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/colorPrimaryDark">
+        android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/score_list_item"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="0sp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            card_view:cardCornerRadius="0sp"
-            card_view:cardElevation="0sp"
-            card_view:cardPreventCornerOverlap="false"
-            card_view:cardUseCompatPadding="true"
-            card_view:contentPadding="18sp"
-            card_view:cardBackgroundColor="@color/colorPrimaryDark"
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             >
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                >
+            <TextView
+                android:id="@+id/details_player_name"
+                android:transitionName="@string/transition_player_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:padding="4dp"
+                style="@style/Heading"
+                />
 
-                <TextView
-                    android:id="@+id/details_player_name"
-                    android:transitionName="@string/transition_player_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:padding="4dp"
-                    style="@style/Heading"
-                    />
-
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
+        </RelativeLayout>
 
     </LinearLayout>
 
