--- a/app/src/main/res/layout/game_item_view.xml
+++ b/app/src/main/res/layout/game_item_view.xml
@@ -1,40 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.v7.widget.CardView
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/game_list_item"
+    android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:layout_margin="0sp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    card_view:cardCornerRadius="0sp"
+    card_view:cardElevation="0sp"
+    card_view:cardPreventCornerOverlap="false"
+    card_view:cardUseCompatPadding="false"
+    card_view:contentPadding="18sp"
+    card_view:cardBackgroundColor="@color/colorPrimaryAlt2"
+    >
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/game_list_item"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="0sp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        card_view:cardCornerRadius="0sp"
-        card_view:cardElevation="0sp"
-        card_view:cardPreventCornerOverlap="false"
-        card_view:cardUseCompatPadding="true"
-        card_view:contentPadding="18sp"
-        card_view:cardBackgroundColor="@color/colorPrimaryDark"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="20sp"
+        android:layout_marginBottom="20sp"
         >
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/game_text_view"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            >
-
-            <TextView
-                android:id="@+id/game_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:padding="4dp"
-                style="@style/Heading"
-                />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-</FrameLayout>
+            android:gravity="center"
+            android:padding="4dp"
+            style="@style/Heading.Inverted"
+            android:text="This is some text" />
+    </LinearLayout>
+</android.support.v7.widget.CardView>
