--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#305d48</color>
-    <color name="colorPrimaryDark">#234337</color>
+    <color name="colorPrimary">#576d78</color>
+    <color name="colorPrimaryDark">#246048</color>
+    <color name="colorPrimaryAlt1">#047c87</color>
+    <color name="colorPrimaryAlt2">#39a372</color>
+    <color name="colorPrimaryAlt3">#2e8948</color>
+    <color name="colorPrimaryAlt4">#4aaea4</color>
     <color name="colorAccent">#BBE14E</color>
-    <color name="colorHeading">#575c5a</color>
 </resources>
