--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/games_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-    <co.moonmonkeylabs.realmrecyclerview.RealmRecyclerView
-        android:id="@+id/games_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="0sp"
-        app:rrvLayoutType="LinearLayout"
-        app:rrvSwipeToDelete="false"
-        app:rrvEmptyLayoutId="@layout/game_empty_view" />
-</FrameLayout>
+    android:layout_margin="0sp"
+    app:rrvLayoutType="LinearLayout"
+    app:rrvSwipeToDelete="false"
+    app:rrvEmptyLayoutId="@layout/game_empty_view"
+    />
