--- a/app/src/main/res/layout/game_item_view.xml
+++ b/app/src/main/res/layout/game_item_view.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/game_list_item"
+    android:id="@+id/game_list_card"
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,25 +14,19 @@
     card_view:cardElevation="0sp"
     card_view:cardPreventCornerOverlap="false"
     card_view:cardUseCompatPadding="false"
-    card_view:contentPadding="18sp"
-    card_view:cardBackgroundColor="@color/colorPrimaryAlt2"
+    card_view:contentPadding="0sp"
     >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/game_text_view"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
-        >
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="18dp"
+        android:background="@drawable/solid_color_shape"
+        style="@style/Heading.Inverted"
+        android:textColor="@color/text_state_list"
+        android:text="This is some text"
+        android:height="100sp" />
 
-        <TextView
-            android:id="@+id/game_text_view"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:padding="4dp"
-            style="@style/Heading.Inverted"
-            android:textColor="@color/text_state_list"
-            android:text="This is some text" />
-    </LinearLayout>
 </android.support.v7.widget.CardView>
