--- a/app/src/main/res/layout/activity_player_details.xml
+++ b/app/src/main/res/layout/activity_player_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="apps.staydecent.com.tabletoptally.PlayerDetailsActivity">
+    tools:context=".ui.playerscreen.PlayerDetailsActivity">
 
     <include layout="@layout/content_player_details" />
 
