--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="0sp"
     android:clipToPadding="false"
-    tools:context=".MainActivity">
+    tools:context=".views.mainscreen.MainActivity">
 
     <include layout="@layout/content_main" />
 
