--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -35,22 +35,19 @@
                 android:text="" />
         </FrameLayout>
 
-        <LinearLayout
-            android:id="@+id/game_text_container"
+        <FrameLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:transitionGroup="true">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
-                android:id="@+id/game_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="24dp"
-                android:fontFamily="sans-serif-light"
-                android:textAppearance="@android:style/TextAppearance.Material.Title"
-                android:textSize="40sp" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/scores_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-        </LinearLayout>
+        </FrameLayout>
+
     </LinearLayout>
 </FrameLayout>
