--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,51 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/game_container"
+    <RelativeLayout
+        android:id="@+id/game_header_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:transitionGroup="true"
         android:orientation="vertical">
 
-        <FrameLayout
-            android:id="@+id/game_header_container"
+        <TextView
+            android:id="@+id/game_text_view"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="18dp"
+            style="@style/Heading.Inverted"
+            android:background="@drawable/solid_color_shape"
+            android:textColor="@color/text_state_list"
+            android:text="This is some text"
+            android:height="100sp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/scores_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="200sp"
-            android:background="#000"
-            android:transitionGroup="true">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100sp"
+            android:padding="4dp"
+            />
 
-            <ImageView
-                android:id="@+id/game_background_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:tint="@color/background_image_photo_tint"
-                tools:ignore="ContentDescription" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/game_text_view"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:gravity="center"
-                android:padding="4dp"
-                android:background="@drawable/solid_color_shape"
-                style="@style/Heading.Inverted"
-                android:textColor="@color/text_state_list"
-                android:text="" />
-        </FrameLayout>
-
-        <FrameLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/scores_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </FrameLayout>
-
-    </LinearLayout>
 </FrameLayout>
