--- a/app/src/main/res/layout/game_item_view.xml
+++ b/app/src/main/res/layout/game_item_view.xml
@@ -5,7 +5,7 @@
     android:id="@+id/game_list_card"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="0sp"
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
