--- a/app/src/main/res/layout/score_item_view.xml
+++ b/app/src/main/res/layout/score_item_view.xml
@@ -28,12 +28,11 @@
 
             <TextView
                 android:id="@+id/score_player_name"
-                android:transitionName="@string/transition_player_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:padding="4dp"
-                style="@style/Heading"
+                style="@style/Heading.Bold"
                 />
 
             <TextView
